Fix mnist3 test

--- a/clean/mnist3.ipynb
+++ b/clean/mnist3.ipynb
@@ -5,80 +5,108 @@
    "id": "30cdc196fc8f3fff",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-08T23:25:14.642707Z",
-     "start_time": "2024-10-08T23:25:00.144738Z"
+     "end_time": "2024-10-08T23:32:37.986562Z",
+     "start_time": "2024-10-08T23:32:31.704652Z"
     }
    },
    "source": [
     "from fastai.metrics import accuracy\n",
+    "# Do not use fastai.vision.models, that raise an error like AttributeError: 'Sequential' object has no attribute 'fit_one_cycle' \n",
+    "from fastai.vision.all import models\n",
     "from fastai.vision.learner import vision_learner\n",
     "from fastai.learner import Learner\n",
     "import os\n",
     "from pathlib import Path\n",
     "import torch.nn.functional as F\n",
     "from fastai.vision.data import ImageDataLoaders\n",
-    "from fastai.vision.models import resnet18\n",
     "\n",
     "path = Path(os.getenv('MNIST_PATH'))\n",
     "dls = ImageDataLoaders.from_folder(path)\n",
-    "learn: Learner = vision_learner(dls, resnet18, pretrained=False,\n",
-    "                    loss_func=F.cross_entropy, metrics=accuracy)\n",
-    "learn.fit_one_cycle(3, 0.1)"
+    "learn: Learner = vision_learner(dls, models.resnet18, pretrained=False,\n",
+    "                    loss_func=F.cross_entropy, metrics=accuracy)"
    ],
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/manu/courses/ai/fastbook/venv/lib/python3.10/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
-      "  warnings.warn(\n",
-      "/home/manu/courses/ai/fastbook/venv/lib/python3.10/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
-      "  warnings.warn(msg)\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'Sequential' object has no attribute 'fit_one_cycle'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[1], line 14\u001B[0m\n\u001B[1;32m     11\u001B[0m dls \u001B[38;5;241m=\u001B[39m ImageDataLoaders\u001B[38;5;241m.\u001B[39mfrom_folder(path)\n\u001B[1;32m     12\u001B[0m learn: Learner \u001B[38;5;241m=\u001B[39m vision_learner(dls, resnet18, pretrained\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m,\n\u001B[1;32m     13\u001B[0m                     loss_func\u001B[38;5;241m=\u001B[39mF\u001B[38;5;241m.\u001B[39mcross_entropy, metrics\u001B[38;5;241m=\u001B[39maccuracy)\n\u001B[0;32m---> 14\u001B[0m \u001B[43mlearn\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfit_one_cycle\u001B[49m(\u001B[38;5;241m3\u001B[39m, \u001B[38;5;241m0.1\u001B[39m)\n",
-      "File \u001B[0;32m~/courses/ai/fastbook/venv/lib/python3.10/site-packages/fastcore/basics.py:496\u001B[0m, in \u001B[0;36mGetAttr.__getattr__\u001B[0;34m(self, k)\u001B[0m\n\u001B[1;32m    494\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_component_attr_filter(k):\n\u001B[1;32m    495\u001B[0m     attr \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mgetattr\u001B[39m(\u001B[38;5;28mself\u001B[39m,\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_default,\u001B[38;5;28;01mNone\u001B[39;00m)\n\u001B[0;32m--> 496\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m attr \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m: \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mgetattr\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mattr\u001B[49m\u001B[43m,\u001B[49m\u001B[43mk\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    497\u001B[0m \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mAttributeError\u001B[39;00m(k)\n",
-      "File \u001B[0;32m~/courses/ai/fastbook/venv/lib/python3.10/site-packages/torch/nn/modules/module.py:1614\u001B[0m, in \u001B[0;36mModule.__getattr__\u001B[0;34m(self, name)\u001B[0m\n\u001B[1;32m   1612\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m name \u001B[38;5;129;01min\u001B[39;00m modules:\n\u001B[1;32m   1613\u001B[0m         \u001B[38;5;28;01mreturn\u001B[39;00m modules[name]\n\u001B[0;32m-> 1614\u001B[0m \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mAttributeError\u001B[39;00m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m object has no attribute \u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;241m.\u001B[39mformat(\n\u001B[1;32m   1615\u001B[0m     \u001B[38;5;28mtype\u001B[39m(\u001B[38;5;28mself\u001B[39m)\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__name__\u001B[39m, name))\n",
-      "\u001B[0;31mAttributeError\u001B[0m: 'Sequential' object has no attribute 'fit_one_cycle'"
-     ]
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2024-10-07T22:56:40.839273Z",
-     "start_time": "2024-10-07T22:56:40.774129Z"
+     "start_time": "2024-10-08T23:32:40.967412Z"
     }
    },
    "cell_type": "code",
-   "source": "learn.fit_one_cycle(3, 0.1)",
+   "source": "learn.fit_one_cycle(1, 0.1)",
    "id": "initial_id",
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Sequential' object has no attribute 'fit_one_cycle'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[3], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mlearn\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfit_one_cycle\u001B[49m(\u001B[38;5;241m3\u001B[39m, \u001B[38;5;241m0.1\u001B[39m)\n",
-      "File \u001B[0;32m~/courses/ai/fastbook/venv/lib/python3.10/site-packages/fastcore/basics.py:496\u001B[0m, in \u001B[0;36mGetAttr.__getattr__\u001B[0;34m(self, k)\u001B[0m\n\u001B[1;32m    494\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_component_attr_filter(k):\n\u001B[1;32m    495\u001B[0m     attr \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mgetattr\u001B[39m(\u001B[38;5;28mself\u001B[39m,\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_default,\u001B[38;5;28;01mNone\u001B[39;00m)\n\u001B[0;32m--> 496\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m attr \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m: \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mgetattr\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mattr\u001B[49m\u001B[43m,\u001B[49m\u001B[43mk\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    497\u001B[0m \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mAttributeError\u001B[39;00m(k)\n",
-      "File \u001B[0;32m~/courses/ai/fastbook/venv/lib/python3.10/site-packages/torch/nn/modules/module.py:1614\u001B[0m, in \u001B[0;36mModule.__getattr__\u001B[0;34m(self, name)\u001B[0m\n\u001B[1;32m   1612\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m name \u001B[38;5;129;01min\u001B[39;00m modules:\n\u001B[1;32m   1613\u001B[0m         \u001B[38;5;28;01mreturn\u001B[39;00m modules[name]\n\u001B[0;32m-> 1614\u001B[0m \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mAttributeError\u001B[39;00m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m object has no attribute \u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;241m.\u001B[39mformat(\n\u001B[1;32m   1615\u001B[0m     \u001B[38;5;28mtype\u001B[39m(\u001B[38;5;28mself\u001B[39m)\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__name__\u001B[39m, name))\n",
-      "\u001B[0;31mAttributeError\u001B[0m: 'Sequential' object has no attribute 'fit_one_cycle'"
-     ]
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "    /* Turns off some styling */\n",
+       "    progress {\n",
+       "        /* gets rid of default border in Firefox and Opera. */\n",
+       "        border: none;\n",
+       "        /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "        background-size: auto;\n",
+       "    }\n",
+       "    progress:not([value]), progress:not([value])::-webkit-progress-bar {\n",
+       "        background: repeating-linear-gradient(45deg, #7e7e7e, #7e7e7e 10px, #5c5c5c 10px, #5c5c5c 20px);\n",
+       "    }\n",
+       "    .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "        background: #F44336;\n",
+       "    }\n",
+       "</style>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      <progress value='0' class='' max='1' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      0.00% [0/1 00:00&lt;?]\n",
+       "    </div>\n",
+       "    \n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: left;\">\n",
+       "      <th>epoch</th>\n",
+       "      <th>train_loss</th>\n",
+       "      <th>valid_loss</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table><p>\n",
+       "\n",
+       "    <div>\n",
+       "      <progress value='604' class='' max='937' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      64.46% [604/937 00:21&lt;00:11 0.3602]\n",
+       "    </div>\n",
+       "    "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
-   "execution_count": 3
+   "execution_count": null
   },
   {
    "metadata": {},
