--- a/perso/mnist5.ipynb
+++ b/perso/mnist5.ipynb
@@ -7,6 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "from fastai.vision.all import *\n",
     "print(\"Is CUDA available?:\", torch.cuda.is_available())"
    ]
@@ -48,8 +50,7 @@
     "    blocks=(ImageBlock, CategoryBlock),\n",
     "    get_items=get_image_files,\n",
     "    splitter=GrandparentSplitter(),\n",
-    "    get_y=parent_label,\n",
-    "    item_tfms=Resize(128)\n",
+    "    get_y=parent_label\n",
     ")\n",
     "chars"
    ]
@@ -96,7 +97,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn.predict('~/.fastai/data/mnist_sample/train/3/10.png')"
+    "learn.predict(os.getenv('HOME') + '/.fastai/data/mnist_sample/train/3/10.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e2d421151e69327",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learn.show_results()"
    ]
   }
  ],
